// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`errors when trying to record internal events 1`] = `"The emitted helper cannot be used to listen to internal events."`;

exports[`local cleanup fails if component already cleaned up 1`] = `"Component was already destroyed before cleanup called."`;

exports[`local cleanup fails if component already cleaned up 2`] = `"Component was already destroyed before cleanup called."`;

exports[`records user events 1`] = `
Array [
  Array [
    Object {
      "count": 0,
    },
  ],
  Array [
    Object {
      "count": 1,
    },
  ],
]
`;

exports[`records user events 2`] = `
Array [
  "button-click",
  "button-click",
]
`;

exports[`records user events 3`] = `
Array [
  Array [
    Object {
      "count": 2,
    },
  ],
]
`;

exports[`records user events 4`] = `
Array [
  "button-click",
]
`;
